syntax="proto3";

option go_package = "src/pkg/pb/account";

service AccountService {
  rpc CheckIsAuth(CheckIsAuthRequest) returns (CheckIsAuthResponse);
  rpc GetAddressByUserId(GetAddressByUserIdRequest) returns (GetAddressByUserIdResponse);
  rpc GetUserByUserId(GetUserByUserIdRequest) returns (GetUserByUserIdResponse);
  rpc UpdateHonorPoint(UpdateHonorPointRequest) returns (UpdateHonorPointResponse);
  rpc UpdateIncome(UpdateInComeRequest) returns (UpdateInComeResponse);
}

//Authenticate account
message CheckIsAuthRequest {
  string Token = 1;
}

message CheckIsAuthResponse {
  bool isAuth = 1;
}

//Address
message GetAddressByUserIdRequest{
  uint32 UserId = 1;
  uint32 AddressId = 2;
}

message GetAddressByUserIdResponse{
  string Firstname = 1;
  string Lastname = 2;
  string Phone = 3;
  string Email = 4;
  string Province = 5;
  string District = 6;
  string SubDistrict = 7;
  string Address = 8;
  string TypeAddress = 9;
  uint32 ID = 10;
}

message GetUserByUserIdRequest{
  uint32 UserId = 1;
}
message GetUserByUserIdResponse{
  string Shopname = 1;
}

message UpdateHonorPointRequest{
  uint32 userId = 1;
  int32 caseId = 2;
}

message UpdateHonorPointResponse{
 string message = 1;
}

message UpdateInComeRequest{
  uint32 userId = 1;
  int32 caseId = 2;
  float value = 3;
}
message UpdateInComeResponse{
  string message = 1;
}
